force-app/main/default/objects/TT_Automation__c/TT_Automation__c.object-meta.xml
<CustomObject>
    <description>Information about automatic processes</description>
    <label>TT Automation</label>
    <nameField>
        <displayFormat>AUTO-{0000}</displayFormat>
        <label>TT Automation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TT Automations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>