force-app/main/default/objects/TT_Automation__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Plain English. Include source, destination, trigger, and business purpose.</description>
    <inlineHelpText>Plain English. Include source, destination, trigger, and business purpose.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>