force-app/main/default/objects/TT_Automation__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <businessOwnerUser>kim@transitiontrails.org.prod.ttdev</businessOwnerUser>
    <complianceGroup>NA</complianceGroup>
    <description>Platform-agnostic automation ID from the tool URL.</description>
    <externalId>true</externalId>
    <inlineHelpText>Platform-agnostic automation ID from the tool URL.</inlineHelpText>
    <label>External ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>