force-app/main/default/objects/TT_Automation__c/fields/External_URL__c.field-meta.xml
<CustomField>
    <fullName>External_URL__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Direct URL to the automation for one-click debugging.</description>
    <inlineHelpText>Direct URL to the automation for one-click debugging.</inlineHelpText>
    <label>External URL</label>
    <type>Url</type>
</CustomField>