force-app/main/default/objects/TT_Automation__c/fields/Last_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Date__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Populated from the most recent Automation Log. Do not edit manually.</description>
    <inlineHelpText>Populated from the most recent Automation Log. Do not edit manually.</inlineHelpText>
    <label>Last Run Date</label>
    <type>Date</type>
</CustomField>