force-app/main/default/objects/TT_Automation__c/fields/Last_Run_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Status__c</fullName>
    <businessOwnerUser>kim@transitiontrails.org.prod.ttdev</businessOwnerUser>
    <complianceGroup>NA</complianceGroup>
    <description>State of the last run</description>
    <inlineHelpText>State of the last run</inlineHelpText>
    <label>Last Run Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Partial Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>