force-app/main/default/objects/TT_Automation__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <businessOwnerUser>kim@transitiontrails.org.prod.ttdev</businessOwnerUser>
    <complianceGroup>NA</complianceGroup>
    <description>Defines on which platform the automation runs</description>
    <inlineHelpText>Defines on which platform the automation runs</inlineHelpText>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Make</fullName>
                <default>true</default>
                <label>Make</label>
            </value>
            <value>
                <fullName>Salesforce Flow</fullName>
            </value>
            <value>
                <fullName>Zapier</fullName>
            </value>
            <value>
                <fullName>Ad-hoc</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>