force-app/main/default/objects/TT_Automation__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>. e.g., Nightly 2 am CDT.</description>
    <inlineHelpText>. e.g., Nightly 2 am CDT.</inlineHelpText>
    <label>Schedule</label>
    <length>100</length>
    <type>Text</type>
</CustomField>