force-app/main/default/objects/TT_Automation__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>The system, which is the source of the automation</description>
    <inlineHelpText>The system, which is the source of the automation</inlineHelpText>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>System</valueSetName>
    </valueSet>
</CustomField>