force-app/main/default/objects/TT_Automation__c/fields/Sprint_Built__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Built__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sprint Built</label>
    <referenceTo>agf__ADM_Sprint__c</referenceTo>
    <relationshipLabel>TT Automations</relationshipLabel>
    <relationshipName>TT_Automations</relationshipName>
    <type>Lookup</type>
</CustomField>