force-app/main/default/objects/TT_Automation__c/fields/Target_System__c.field-meta.xml
<CustomField>
    <fullName>Target_System__c</fullName>
    <businessOwnerUser>kim@transitiontrails.org.prod.ttdev</businessOwnerUser>
    <complianceGroup>NA</complianceGroup>
    <defaultValue>&quot;Salesforce&quot;</defaultValue>
    <description>End point of the automation</description>
    <inlineHelpText>End point of the automation</inlineHelpText>
    <label>Target System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>System</valueSetName>
    </valueSet>
</CustomField>