force-app/main/default/objects/TT_Automation__c/fields/Total_Failures__c.field-meta.xml
<CustomField>
    <fullName>Total_Failures__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>COUNT of all child Automation Log records from TT Build Item with status of Failed</description>
    <inlineHelpText>COUNT of all child Automation Log records from TT Build Item with status of Failed</inlineHelpText>
    <label>Total Failures</label>
    <summaryFilterItems>
        <field>TT_Build_Item__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Automation Log</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>TT_Build_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </summaryFilterItems>
    <summaryForeignKey>TT_Build_Item__c.TT_Automation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>