force-app/main/default/objects/TT_Automation__c/fields/Total_Runs__c.field-meta.xml
<CustomField>
    <fullName>Total_Runs__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>COUNT of all child Automation Log records from TT Build Item</description>
    <inlineHelpText>COUNT of all child Automation Log records from TT Build Item</inlineHelpText>
    <label>Total Runs</label>
    <summaryFilterItems>
        <field>TT_Build_Item__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Automation Log</value>
    </summaryFilterItems>
    <summaryForeignKey>TT_Build_Item__c.TT_Automation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>