force-app/main/default/objects/TT_Automation__c/fields/TT_Automation_Name__c.field-meta.xml
<CustomField>
    <fullName>TT_Automation_Name__c</fullName>
    <businessOwnerUser>kim@transitiontrails.org.prod.ttdev</businessOwnerUser>
    <complianceGroup>NA</complianceGroup>
    <description>Name by which an automation is referenced</description>
    <inlineHelpText>Name by which an automation is referenced</inlineHelpText>
    <label>TT Automation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>