force-app/main/default/objects/TT_Automation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <businessOwnerUser>kim@transitiontrails.org.prod.ttdev</businessOwnerUser>
    <complianceGroup>NA</complianceGroup>
    <description>Category of automation</description>
    <inlineHelpText>Category of automation</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ad-hoc</fullName>
            </value>
            <value>
                <fullName>Event-Triggered</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Webhook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>