force-app/main/default/objects/TT_Automation__c/fields/Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Item__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Item</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>TT Automations</relationshipLabel>
    <relationshipName>TT_Automations</relationshipName>
    <type>Lookup</type>
</CustomField>